@@ -1,5 +1,8 @@
 2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* INSTALL, lib/INSTALL, lib/config-ml.in, lib/config.guess,
+	lib/config.sub, lib/texinfo.tex: Sync from upstream.
+
 	Fix the distdir target to cope with spaces in absolute file names.
 	* lib/am/distdir.am: Quote all instances of $(distdir) and
 	$(top_distdir).  They could contain white space, coming from
